--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,171 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.mainMenu"
-    tools:layout_editor_absoluteY="81dp">
+    android:fitsSystemWindows="true">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/my_toolbar"
+    <android.support.constraint.ConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        android:layout_height="match_parent"
+        android:background="@drawable/background"
+        tools:context="project.cmpt276.androidui.walkingschoolbus.mainMenu"
+        tools:layout_editor_absoluteY="81dp">
 
-    <Button
-        android:id="@+id/goToMap"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/ic_menu_mapmode"
-        android:text="@string/map"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/my_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <Button
-        android:id="@+id/whoIMonitorBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="76dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/ic_menu_myplaces"
-        android:text="@string/parents_dashboard"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    android:layout_marginBottom="36dp"
-    android:layout_marginTop="33dp"
-    android:text="@string/see_who_i_monitor"
-    app:layout_constraintBottom_toTopOf="@+id/manageGroupsBtn"
-    app:layout_constraintEnd_toEndOf="@+id/whoMonitorsMeBtn"
-    app:layout_constraintStart_toStartOf="@+id/whoMonitorsMeBtn"
-    app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
+        <Button
+            android:id="@+id/goToMap"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/ic_menu_mapmode"
+            android:text="@string/map"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
-        android:id="@+id/whoMonitorsMeBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/ic_menu_view"
-        android:text="@string/see_who_monitors_me"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/whoIMonitorBtn"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="76dp"
+            android:layout_marginStart="16dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/ic_menu_myplaces"
+            android:text="@string/parents_dashboard"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginBottom="36dp"
+        android:layout_marginTop="33dp"
+        android:text="@string/see_who_i_monitor"
+        app:layout_constraintBottom_toTopOf="@+id/manageGroupsBtn"
+        app:layout_constraintEnd_toEndOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintStart_toStartOf="@+id/whoMonitorsMeBtn"
+        app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
-    <Button
-        android:id="@+id/manageGroupsBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="140dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/ic_menu_sort_by_size"
-        android:text="@string/manage_groups"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/whoMonitorsMeBtn"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/ic_menu_view"
+            android:text="@string/see_who_monitors_me"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/greeting"
+        <Button
+            android:id="@+id/manageGroupsBtn"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="140dp"
+            android:layout_marginStart="16dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/ic_menu_sort_by_size"
+            android:text="@string/manage_groups"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/greeting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="124dp"
+            android:text="@string/welcome_to_the_walking_school_bus_app"
+            android:textAlignment="center"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnMessagingActivity"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="76dp"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/sym_action_email"
+            android:text="@string/messages"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
+            android:id="@+id/btnPanic"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="64dp"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:drawableStart="@android:drawable/stat_notify_error"
+            android:text="@string/emergency"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/edtEmergencyMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="232dp"
+            android:ems="10"
+            android:hint="@string/emergency_message"
+            android:inputType="textMultiLine"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnSendEmergencyText"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="232dp"
+            android:backgroundTint="@android:color/holo_red_dark"
+            android:text="@string/send"
+            android:visibility="invisible"
+            app:layout_constraintStart_toEndOf="@+id/edtEmergencyMessage"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/storeBtn"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="140dp"
+            android:layout_marginEnd="8dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@android:drawable/ic_menu_sort_alphabetically"
+            android:text="Store"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/userAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="136dp"
+            android:layout_marginTop="80dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btnLeaderboards"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginEnd="216dp"
+            android:layout_marginTop="64dp"
+            android:backgroundTint="@android:color/holo_blue_dark"
+            android:drawableStart="@drawable/ic_supervisor_account"
+            android:text="Leaderboard"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="124dp"
-        android:text="@string/welcome_to_the_walking_school_bus_app"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer_view"
+        app:headerLayout="@layout/nav_header"/>
 
-    <Button
-        android:id="@+id/btnMessagingActivity"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="76dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/sym_action_email"
-        android:text="@string/messages"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/btnPanic"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:drawableStart="@android:drawable/stat_notify_error"
-        android:text="@string/emergency"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtEmergencyMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="232dp"
-        android:ems="10"
-        android:hint="@string/emergency_message"
-        android:inputType="textMultiLine"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnSendEmergencyText"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="232dp"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:text="@string/send"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/edtEmergencyMessage"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/storeBtn"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="140dp"
-        android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@android:drawable/ic_menu_sort_alphabetically"
-        android:text="Store"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageView
-        android:id="@+id/userAvatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="136dp"
-        android:layout_marginTop="80dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnLeaderboards"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginEnd="216dp"
-        android:layout_marginTop="64dp"
-        android:backgroundTint="@android:color/holo_blue_dark"
-        android:drawableStart="@drawable/ic_supervisor_account"
-        android:text="Leaderboard"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
