--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -35,19 +35,8 @@
             android:drawableStart="@android:drawable/ic_menu_mapmode"
             android:text="@string/map"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent" /><![CDATA[
 
-        <Button
-            android:id="@+id/whoIMonitorBtn"
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="76dp"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:drawableStart="@android:drawable/ic_menu_myplaces"
-            android:text="@string/parents_dashboard"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
         android:layout_marginBottom="36dp"
         android:layout_marginTop="33dp"
         android:text="@string/see_who_i_monitor"
@@ -56,43 +45,11 @@
         app:layout_constraintStart_toStartOf="@+id/whoMonitorsMeBtn"
         app:layout_constraintTop_toTopOf="@+id/btnMessagingActivity" />
 
-        <Button
-            android:id="@+id/whoMonitorsMeBtn"
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:drawableStart="@android:drawable/ic_menu_view"
-            android:text="@string/see_who_monitors_me"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/manageGroupsBtn"
-            android:layout_width="150dp"
-            android:layout_height="60dp"
-            android:layout_marginBottom="140dp"
-            android:layout_marginStart="16dp"
-            android:backgroundTint="@android:color/holo_blue_dark"
-            android:drawableStart="@android:drawable/ic_menu_sort_by_size"
-            android:text="@string/manage_groups"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/greeting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="124dp"
-            android:text="@string/welcome_to_the_walking_school_bus_app"
-            android:textAlignment="center"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+
+
+        ]]>
 
         <Button
             android:id="@+id/btnMessagingActivity"
@@ -147,8 +104,8 @@
             android:id="@+id/storeBtn"
             android:layout_width="150dp"
             android:layout_height="60dp"
-            android:layout_marginBottom="140dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="208dp"
             android:backgroundTint="@android:color/holo_blue_dark"
             android:drawableStart="@android:drawable/ic_menu_sort_alphabetically"
             android:text="Store"
