--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,10 +16,15 @@
         app:srcCompat="@drawable/walking_school_bus" />
 
     <TextView
+        android:id="@+id/txtNavNameHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My header title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        android:textSize="18sp" />
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/txtNavEmailHeader"
+        android:layout_width="match_parent"
+        android:layout_height="18dp" />
 
 </LinearLayout>
