--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -79,8 +79,8 @@
             android:id="@+id/edtEmergencyMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="232dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="152dp"
             android:ems="10"
             android:hint="@string/emergency_message"
             android:inputType="textMultiLine"
@@ -92,8 +92,8 @@
             android:id="@+id/btnSendEmergencyText"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="232dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="152dp"
             android:backgroundTint="@android:color/holo_red_dark"
             android:text="@string/send"
             android:visibility="invisible"
@@ -116,9 +116,10 @@
             android:id="@+id/userAvatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginTop="232dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
@@ -144,6 +145,18 @@
             android:text="Permissons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/txtSetRank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Place"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.621" />
 
     </android.support.constraint.ConstraintLayout>
 
