--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -5,26 +5,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context="project.cmpt276.androidui.walkingschoolbus.Permissions">
+    tools:context="project.cmpt276.androidui.walkingschoolbus.Permissions"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/permissionDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="Pending Permissions"
+        android:text="Pending Requests"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/listOfPendingPermissions"
+        app:layout_constraintStart_toStartOf="@+id/listOfPendingPermissions"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/listOfPendingPermissions"
-        android:layout_width="317dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="53dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="168dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/permissionDescription" />
+
+    <Button
+        android:id="@+id/goToPreviousRequests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:text="Previous Requests"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
