--- a/app/src/main/res/drawable/button_border_unlocked.xml
+++ b/app/src/main/res/drawable/button_border_unlocked.xml
@@ -2,6 +2,6 @@
 <!--https://stackoverflow.com/questions/7690416/android-border-for-button-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFF00"></solid>
     <stroke android:width="1px" android:color="#000000" />
+    <solid android:color= "#00ff87"></solid>
 </shape>
